--- a/.github/workflows/laventi_sync.yml
+++ b/.github/workflows/laventi_sync.yml
@@ -5,22 +5,13 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-      - name: Install dependencies
-        run: pip install requests
-      - name: Run Upload Script
-        run: python Upload_Loaders.py
-      - name: Commit Files
+      - name: Setup King Core
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add .
-          git commit -m "🚀 تم حقن ملفات Loaders 2026 في السيرفر الملكي" || exit 0
-          git push
+          node treasury_stream.js
+        env:
+          RAILWAY_TOKEN: "452937c2-91fa-4a7f-8c41-726f888ba9bc"
+          KING_WALLET: "TAgBt6Nkyk19kbwkv8CW6EjZ3dmrkgAibu"
