Config: Add /services route to vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,10 @@
       "dest": "/server.js"
     },
     {
+      "src": "/services",
+      "dest": "/King_Genius/download.htm"
+    },
+    {
       "src": "/",
       "dest": "/King_Genius/download.htm"
     }
